--- a/css/base.css
+++ b/css/base.css
@@ -24,7 +24,7 @@ body {
   min-height: 100%;
   padding: 0;
   margin: 0;
-  background: url(./img_intro/intro.png) fixed top left no-repeat;
+  background: url(../img_intro/intro.png) fixed top left no-repeat;
   background-size: 100% 100%;
 }
 .header{
